example/lib/src/generated/errors/errors_localization_ne.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Nepali (`ne`).
class ErrorsLocalizationNe extends ErrorsLocalization {
  ErrorsLocalizationNe([String locale = 'ne']) : super(locale);

  @override
  String get error => 'एक त्रुटि उत्पन्न भयो';

  @override
  String get unexpectedError => 'एक अप्रत्याशित त्रुटि उत्पन्न भयो';

  @override
  String get bugReportSentText => 'बग रिपोर्ट सफलतापूर्वक पठाइएको।';
}
